# proyecto_compiladores2

./: CMakeLists.txt  entrada.txt  entrada_struct.txt
.cache/clangd/index/: ast.cpp.062369FDC6A6A1A4.idx  ast.h.CEE4BDFE890D0733.idx  lexer.cpp.B3B51C8495A3A03B.idx  lexer.h.45CA1312E426E9EC.idx  main.cpp.F90566DFD7BA8D97.idx  main_antiguo.cpp.5573811BBFA1743B.idx  main_sfml.cpp.9461F551F6FCBC1D.idx  parser.cpp.CD375DA8CF729259.idx  parser.h.25F79F90F8068E4B.idx  token.h.1122D673585A0466.idx
include/: ast.h  lexer.h  parser.h  token.h
src/: ast.cpp  lexer.cpp  main.cpp  main_antiguo.cpp  main_sfml.cpp  parser.cpp
